...
            android:textColor="#B0B0B0"
            android:layout_gravity="center"
            android:layout_marginBottom="64dp" />

        <!-- Action Buttons -->
        <Button
            android:id="@+id/startWorkoutButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/start_workout"
            android:textSize="14sp"
            android:textStyle="normal"
...
